v1.2.1, 2016-01-08

* Uiso parsing from CIF files for better structure factors
* support for parsing Rigaku RAS files (Smartlab Guidance)
* new getDetectorPos/Distance routines in QConversion
  This can be used for all types of detectors to determine their position and
  distance for data normalization purposes
* add FuzzyGridder3D class
* add FuzzyGridder2D class (see mailing-list for details)
* add possibility of Pseudo-Angle (basically arbitrary contraints) to Q2AngFit
* add Carbon(diamond), HOPG materials
* enhancement in FIO file parser
* much improved TIFF file parser
* IntensityNormalizer gained possibility to normalize CCD data

v1.2.0, 2015-08-03

* Radicon file support was removed (no test scripts available!)
* replace pytables by faster and more convenient h5py
* bug fixes/improvements in the file parsers (discovered by the unit tests!)
* new unittests for file parsers (spec, edf, xrdml, esg, nja, fio, cbf, tif)
* added different oxidation states of the chemical elements to the database
* huge speed improvements for the database access, especially when querying 
  multiple values at the same time
* add PseudoVoigtAsym option in xu.math.peakfit
* memory usage optimization in FastScanCCD

v1.1.2, 2015-04-22

* new webpage theme to allow for easier reading (esp. mobile devices)
* huge set of improvements for working with FastScans (ESRF ID01)
* keep_open option in EDFFile to speed up reading of multiple images
* new convenience function for parsing data from spec-files
* improve peak position finding in area-detector calibration
* added new material AlAs

v1.1.1, 2015-01-22

* new PseudoVoigt1dasym function implementing an asymmetric PseudoVoigt peak
* FuzzyGridder1D: improved 1D gridder using a range of value for each data
  point
* fix memory leak in XRDMLFile by abandoning minidom
* edf-parser improvements: support for multiple images per file
* spec-parser improvements, keep file closed when not parsing it
* peak_fit: linear background feature